--- a/.github/workflows/elasticsearch.yml
+++ b/.github/workflows/elasticsearch.yml
@@ -55,13 +55,13 @@ jobs:
         run: hatch run docs
 
       - name: Run tests
-        run: hatch run cov
+        run: hatch run cov-retry
 
       - name: Nightly - run unit tests with Haystack main branch
         if: github.event_name == 'schedule'
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
-          hatch run cov -m "not integration"
+          hatch run cov-retry -m "not integration"
 
       - name: Send event to Datadog for nightly failures
         if: failure() && github.event_name == 'schedule'
