--- a/.github/workflows/nvidia.yml
+++ b/.github/workflows/nvidia.yml
@@ -55,7 +55,7 @@ jobs:
         run: hatch run lint:all
 
       - name: Run tests
-        run: hatch run cov
+        run: hatch run cov-retry
 
       - name: Generate docs
         if: matrix.python-version == '3.9' && runner.os == 'Linux'
@@ -65,7 +65,7 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           hatch run pip install git+https://github.com/deepset-ai/haystack.git
-          hatch run cov -m "not integration"
+          hatch run cov-retry -m "not integration"
 
       - name: Send event to Datadog for nightly failures
         if: failure() && github.event_name == 'schedule'
